# CrazyfliePathPlanning

./: .gitignore  README.md  run.bat  run.sh
Planner/: planner.h
Sensor/: sensor.cpp  sensor.h
World/: world.cpp  world.h
src/: CMakeLists.txt  main.cpp  node.h  node.hpp  nodeDstar.h  nodeDstar.hpp  openList.h  openList.hpp  planner.cpp  planner.h  plannerDstar.h  plannerDstar.hpp  sensor.cpp  sensor.h  util.h  world.cpp  world.h
src/BulletCollision/: CMakeLists.txt
src/LinearMath/: CMakeLists.txt
src/cmake/: FindMatlab.cmake
test/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cfPlanning_test  node.h  nodeDstar.cpp  nodeDstar.h  nodeDstar.hpp  openList.cpp  openList.h  openList.hpp  planner.h  plannerDstar.cpp  plannerDstar.h  plannerDstar.hpp  sensor.cpp  sensor.h  test.cpp  util.h
test/maps/: map1.txt  map2.txt  map3.txt  map5.txt  map_test.txt
test/results/: map1_range10_connection6.txt  map2_range1_connection6 .txt  map3_range1_connection6 .txt  tmp.txt
test/tmp/: openList.cpp  openList.hpp  plannerDstar.cpp  plannerDstar.hpp
visualization/: cal_cost_con26.m  cal_cost_con6.m  cfPlanning.mexw64  crazyflie.m  dstar_data.mat  eval_test.m  exp_data_con6.mat  map1.avi  runsim.asv  runsim.m  simplify_path2.m  test_trajectory.m  trajectory_generator.m
visualization/maps/: map1.txt  map2.txt  map3.txt  map_test.txt
visualization/path_planning/: plot_path.m
visualization/utils/: QuadPlot.m
